--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,18 @@
 *.sln.docstates
 *.DS_Store
 CppProperties.json
-
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
+.swp
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
